# multi-threaded-web-crawler

./: CMakeLists.txt  README.md  SETUP_GUIDE.md  WebCrawlerRunner.py  basic_crawler.cpp  build.bat  build_crawler.bat  build_full.bat  build_hello.bat  build_minimal.bat  build_script.bat  build_simple.bat  build_test.bat  build_test_wikipedia.bat  build_universal_crawler.bat  build_wiki_crawler.bat  cleanup.bat  config.json  crawler_config.json  hello.cpp  install_cmake.bat  install_dependencies.bat  install_deps.bat  main.cpp  minimal_crawler.cpp  run_crawler.bat  simple_build.bat  simple_main.cpp  temp_build.bat  temp_main.cpp  test_crawler.cpp  test_wikipedia.cpp  universal_crawler.cpp  universal_crawler.hpp  universal_crawler_main.cpp  vs_setup.bat  wiki_crawler_main.cpp
data/: crawled_pages.csv  discovered_images.csv
data/content/: www.youtube.com_0_41.html  www.youtube.com_1_153.html  www.youtube.com_1_37.html  www.youtube.com_1_4771.html  www.youtube.com_2_106.html  www.youtube.com_2_1101.html  www.youtube.com_2_5537.html  www.youtube.com_2_6868.html  www.youtube.com_3_1101.html  www.youtube.com_3_153.html  www.youtube.com_3_1724.html  www.youtube.com_3_3030.html  www.youtube.com_3_5021.html  www.youtube.com_3_6868.html  www.youtube.com_4_1655.html  www.youtube.com_4_2704.html  www.youtube.com_4_5457.html  www.youtube.com_5_1101.html  www.youtube.com_5_4041.html
docs/: CONFIG.md  DEVELOPMENT.md
include/: build_config.hpp  compat_fixes.hpp  config.hpp  config_intellisense.hpp  content_analyzer.hpp  crawler.hpp  crawler_features.hpp  curl_stubs.hpp  database.hpp  database_extensions.hpp  file_indexer.hpp  image_analyzer.hpp  intellisense_helpers.hpp  monitoring.hpp  monitoring_extensions.hpp  resource_manager.hpp  sqlite_stubs.hpp  thread_pool.hpp  thread_pool_intellisense.hpp  universal_crawler.hpp  url_parser.hpp  webcrawler_class.hpp  webcrawler_intellisense.hpp
src/: config.cpp  content_analyzer.cpp  crawler.cpp  crawler_features.cpp  curl_stubs.cpp  database.cpp  file_indexer.cpp  image_analyzer.cpp  main.cpp  monitoring.cpp  resource_manager.cpp  thread_pool.cpp  universal_crawler.cpp  url_parser.cpp
